--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,9 @@
         "array": "cpp",
         "deque": "cpp",
         "span": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "fstream": "cpp",
+        "queue": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
